// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button should return a blue button 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#334ffa",
      "borderRadius": 10,
      "height": 50,
      "justifyContent": "center",
      "opacity": 1,
      "width": "100%",
    }
  }
  testID="primary-button"
>
  <Text
    style={
      [
        {
          "color": "#ffffff",
          "fontSize": 12,
          "fontWeight": "800",
          "lineHeight": 16.39,
        },
      ]
    }
  >
    A.TITLE
  </Text>
</View>
`;

exports[`button should return a snapshot of the component 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#334ffa",
      "borderRadius": 10,
      "height": 50,
      "justifyContent": "center",
      "opacity": 1,
      "width": "48%",
    }
  }
  testID="primary-button"
>
  <Text
    style={
      [
        {
          "color": "#ffffff",
          "fontSize": 12,
          "fontWeight": "800",
          "lineHeight": 16.39,
        },
      ]
    }
  >
    A.TITLE
  </Text>
</View>
`;
